fix: wrap error details in a block

--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ html {
 body {
   font-family: "Lato", Arial;
   color: #d4d4da;
-  font-size: 16px;
+  font-size: 20px;
   margin: 2em auto;
   max-width: 800px;
   padding: 1em;
@@ -25,6 +25,7 @@ body {
 .error-middle {
   display: block;
   vertical-align: middle;
+  width: 60vw;
 }
 
 a {
@@ -45,4 +46,13 @@ a:hover {
 a:active {
   box-shadow: none;
   top: 5px;
+}
+
+.cloudflare-block h1 {
+  font-size: 16px;
+}
+.cloudflare-block p,
+.cloudflare-block ul,
+.cloudflare-block li {
+  font-size: 12px;
 }
